Added config and common helpers

--- a/projects/math/math.vcxproj
+++ b/projects/math/math.vcxproj
@@ -90,6 +90,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\common.hpp" />
     <ClInclude Include="include\vec2.hpp" />
     <ClInclude Include="include\vec3.hpp" />
   </ItemGroup>
